--- a/src/win32/liblogging.vcproj
+++ b/src/win32/liblogging.vcproj
@@ -199,9 +199,21 @@
 			SourceControlFiles="FALSE">
 			<File
 				RelativePath="..\oscallsUnix.c">
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\oscallsWin32.c">
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\socketsUnix.c">
