UDP and UNIX domain sockets added. BEEP server is probably in an unusable state with this snapshot. Will be updated soon - but I thought it was time for an update...

--- a/src/makefile
+++ b/src/makefile
@@ -47,5 +47,5 @@ clean:
 	$(RM) core
 
 # Special dependencies.
-socket.o: sockets.c socketsUnix.c sockets.h
+sockets.o: sockets.c socketsUnix.c sockets.h
 oscalls.o: oscalls.c oscallsUnix.c oscalls.h
