- fix timezone handling under solaris - add ability to set the testsrvr IP on the command line. - make solaris/makefile use unix line endings.

--- a/src/solaris/makefile
+++ b/src/solaris/makefile
@@ -1,10 +1,13 @@
 VPATH = ..
 
-#CC = gcc
+CC = gcc
 
 # This is really only needed when using gcc ... as cc links them in by
 # default.  However, they don't hurt anything.
 EXTRA_LIBS = -lsocket -lnsl
+
+# Tell config.h we are compiling on solaris.
+CFLAGS+=-DSROS_Solaris_
 
 include ../makefile
 
