Add the arch dependent files to EXTRA_DIST
- Until there is a better solution, stick the arch dependent files into
EXTRA_DIST (can't be added to _SOURCES as the c files are included by
oscalls.c and sockets.c)
- Add a bit more quoting and remove superfluous check

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,12 @@ liblogging_la_SOURCES = \
 	stringbuf.c \
 	syslogmessage.c
 
+os_sources = \
+	oscallsUnix.c \
+	oscallsWin32.c \
+	socketsUnix.c \
+	socketsWin32.c
+
 include_HEADERS = \
 	liblogging.h \
 	srAPI.h \
@@ -50,3 +56,5 @@ testsrvr_LDADD = liblogging.la
 
 testdrvr_SOURCES = testdrvr.c
 testdrvr_LDADD = liblogging.la
+
+EXTRA_DIST = $(os_sources)
