Rename src/config.h into src/settings.h
config.h has a special meaning in a autoconf project.
As a temporary workaround, rename src/config.h in src/settings.h and do a
search in replace in the source files.

settings.h should utimately go away:
The default values should either go into a files defaults.h
(or be implemented via ac_defines in configure.ac)
The features should probably be ./configure --enable-feature switches.

"make distcheck" should pass now (for linux).

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -45,6 +45,7 @@ noinst_HEADERS = \
 	lstnprof-3195raw.h \
 	namevaluetree.h \
 	oscalls.h \
+	settings.h \
 	sockets.h \
 	srUtils.h \
 	stringbuf.h
