cleaned up some warnings; fixed some potentially bad errors
thanks to darix for pointing this out

--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,9 @@ AC_CONFIG_HEADER([config.h])
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_LIBTOOL
+if test "$GCC" = "yes"
+then CFLAGS="$CFLAGS -W -Wall -Wformat-security -Wshadow -Wcast-align -Wpointer-arith -Wmissing-format-attribute -g"
+fi
 
 save_LIBS=$LIBS
 LIBS=
