prepare for libstdlog component

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,3 +2,8 @@ SUBDIRS = doc src
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = liblogging.pc
+
+if ENABLE_STDLOG
+SUBDIRS += stdlog
+endif
+
