make rfc3195 library an optional component

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,14 @@
-SUBDIRS = doc src
+SUBDIRS = 
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = liblogging.pc
 
 if ENABLE_STDLOG
+pkgconfig_DATA = stdlog/libstdlog.pc
 SUBDIRS += stdlog
+endif
+
+if ENABLE_RFC3195
+pkgconfig_DATA = liblogging.pc
+SUBDIRS += doc src
 endif
 
