fix: liblogging.pc skipped by make install

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,15 @@
 SUBDIRS = 
+pkgconfig_DATA =
 
 pkgconfigdir = $(libdir)/pkgconfig
 
 if ENABLE_STDLOG
-pkgconfig_DATA = stdlog/liblogging-stdlog.pc
+pkgconfig_DATA += stdlog/liblogging-stdlog.pc
 SUBDIRS += stdlog
 endif
 
 if ENABLE_RFC3195
-pkgconfig_DATA = rfc3195/liblogging-rfc3195.pc
+pkgconfig_DATA += rfc3195/liblogging-rfc3195.pc
 SUBDIRS += rfc3195/doc rfc3195/src
 endif
 
