--- a/stdlog/Makefile.am
+++ b/stdlog/Makefile.am
@@ -1,15 +1,10 @@
 lib_LTLIBRARIES = liblogging-stdlog.la
-liblogging_la_CPPFLAGS =
+liblogging_stdlog_la_CPPFLAGS =
 
 liblogging_stdlog_la_SOURCES = \
 	stdlog.c \
 	uxsock.c \
 	timeutils.c
-
-if ENABLE_JOURNAL
-   liblogging_la_CPPFLAGS = $(LIBSYSTEMD_JOURNAL_CFLAGS)
-   liblogging_stdlog_la_SOURCES += jrnldrvr.c
-endif
 
 pkginclude_HEADERS = \
 	stdlog.h
@@ -21,3 +16,9 @@ tester_SOURCES = tester.c
 tester_LDADD = liblogging-stdlog.la
 
 EXTRA_DIST = 
+
+if ENABLE_JOURNAL
+   liblogging_stdlog_la_LIBADD =  $(LIBSYSTEMD_JOURNAL_LIBS)
+   liblogging_stdlog_la_SOURCES += jrnldrvr.c
+   # tester_LDADD +=  $(LIBSYSTEMD_JOURNAL_LIBS)
+endif
