--- a/stdlog/Makefile.am
+++ b/stdlog/Makefile.am
@@ -1,5 +1,6 @@
 lib_LTLIBRARIES = liblogging-stdlog.la
 liblogging_stdlog_la_CPPFLAGS =
+liblogging_stdlog_la_LIBADD =  $(SOL_LIBS)
 
 liblogging_stdlog_la_SOURCES = \
 	stdlog.c \
@@ -15,12 +16,12 @@ noinst_HEADERS =
 noinst_PROGRAMS = tester
 
 tester_SOURCES = tester.c
-tester_LDADD = liblogging-stdlog.la
+tester_LDADD = liblogging-stdlog.la $(SOL_LIBS)
 
 EXTRA_DIST = 
 
 if ENABLE_JOURNAL
-   liblogging_stdlog_la_LIBADD =  $(LIBSYSTEMD_JOURNAL_LIBS)
+   liblogging_stdlog_la_LIBADD +=  $(LIBSYSTEMD_JOURNAL_LIBS)
    liblogging_stdlog_la_SOURCES += jrnldrvr.c
    # tester_LDADD +=  $(LIBSYSTEMD_JOURNAL_LIBS)
 endif
