build system: build man page

--- a/stdlog/Makefile.am
+++ b/stdlog/Makefile.am
@@ -1,3 +1,6 @@
+EXTRA_DIST =
+CLEANFILES =
+
 lib_LTLIBRARIES = liblogging-stdlog.la
 liblogging_stdlog_la_CPPFLAGS =
 liblogging_stdlog_la_LIBADD =  $(SOL_LIBS)
@@ -15,10 +18,15 @@ pkginclude_HEADERS = \
 noinst_HEADERS =
 noinst_PROGRAMS = tester
 
+man3_MANS = stdlog.3
+CLEANFILES += stdlog.3
+EXTRA_DIST += stdlog.3
+
+stdlog.3: stdlog.rst
+	$(AM_V_GEN) $(RST2MAN) $< $@
+
 tester_SOURCES = tester.c
 tester_LDADD = liblogging-stdlog.la $(SOL_LIBS)
-
-EXTRA_DIST = 
 
 if ENABLE_JOURNAL
    liblogging_stdlog_la_LIBADD +=  $(LIBSYSTEMD_JOURNAL_LIBS)
