doc: add info link on how to specify interface version

--- a/stdlog/Makefile.am
+++ b/stdlog/Makefile.am
@@ -6,6 +6,8 @@ liblogging_stdlog_la_LIBADD =  $(SOL_LIBS)
 liblogging_stdlog_la_LDFLAGS = \
 	-version-info 0:0:0 \
 	-export-symbols-regex '(^stdlog_.*)'
+# For instructions on how to increment --version-info see:
+# http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
 
 liblogging_stdlog_la_SOURCES = \
 	stdlog.c \
